@@ -21,7 +21,7 @@
 				<preloaditems>2</preloaditems>
 				<pagecontrol>531</pagecontrol>
 				<scrolltime tween="cubic" easing="out">500</scrolltime>
-				<visible>Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows)</visible>
+				<visible>Container.Content(sets) | Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons)</visible>
 				<animation effect="slide" end="20,0" time="0" condition="String.IsEqual(Skin.AspectRatio,21:9)">Conditional</animation>
 				<itemlayout height="370" width="600">
 					<control type="group">
