@@ -5,6 +5,7 @@
 • Fix missing clearlogos with moviesets widget
 • Fix in musicvideo views
 • Fix label with moviesets thumbnails
+• Enable landscape views for seasons
 • Drop support for using hyphen as none value
 • Minnor fixes
 
